src/Weather.css
.Weather {
  border: 1px solid #dadde1;
  color: rgb(135, 135, 135);
  font-family: arial, sans-serif;
  padding: 16px;
  border-radius: 4px;
}

.Weather form {
  margin-bottom: 20px;
}

.Weather h1 {
  color: #878787;

  display: block;
  font-size: 24px;
  font-weight: 100;
  height: 28px;
  margin: 20px 0 0 0;
  line-height: 28.8px;
}

.Weather ul {
  margin: 0;
  padding: 0;
}

.Weather li {
  font-size: 16px;
  font-weight: 200;
  height: 16px;
  line-height: 16px;
  list-style: none;
}

.Weather canvas {
  margin-right: 10px;
  margin-top: 5px;
  display: inline-block;
}

.Weather .temperature {
  font-weight: bold;
  color: rgb(32, 33, 36);
  font-size: 50px;
  font-weight: 400;
  line-height: 64px;
}

.Weather .unit {
  color: rgb(32, 33, 36);
  font-size: 16px;
  font-weight: 400;
  position: relative;
  line-height: 1;
  top: -32px;
  margin-left: 5px;
}

